# url-shortener

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  README.md  rust-toolchain.toml
src/: main.rs
templates/: index.html
