[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["tls-none", "runtime-tokio", "sqlite", "macros"] }
url = { version = "2.5.0", features = ["serde"] }
